seo plugin added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,9 @@ layout: compress
 ---
 
 {% include base_path %}
+{% raw %}
 {% seo %}
+{% endraw %}
 
 <!doctype html>
 <html lang="{{ site.locale | slice: 0,2 }}" class="no-js">
